# rag-docs-chat

./: Home.py  configs.py  home.py  main.py  pyproject.toml  utils.py
pages/: Configuração.py
