[project]
name = "rag-docs-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.8.0",
    "httpx==0.27.2",
    "ipykernel==6.29.4",
    "langchain==0.1.16",
    "langchain-community==0.0.34",
    "langchain-openai==0.1.4",
    "openai==1.24.0",
    "pypdf==4.2.0",
    "python-dotenv==1.0.1",
    "streamlit==1.33.0",
]
